<resources>
    <string name="botao_login">Login</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="input_nome">Nome Completo</string>
    <string name="input_email">Email</string>
    <string name="input_senha">Senha</string>
    <string name="input_confirmar_senha">Confirmar Senha</string>
    <string name="text_nao_possui_conta">Não possui uma conta?</string>
    <string name="text_ja_possui_conta">Já possui uma conta?</string>
    <string name="text_faca_cadastro"><u>Faça seu cadastro agora!</u></string>
    <string name="text_faca_login"><u>Faça seu login agora!</u></string>
    <string name="input_pesquisar">Pesquisar</string>
    <string name="rota_home">HOME</string>
    <string name="rota_nova_publicacao">NOVA_PUBLICACAO</string>
    <string name="rota_editar_perfil">EDITAR_PERFIL</string>
    <string name="rota_perfil">PERFIL</string>
    <string name="rota_perfil_expecifico">PERFIL_EXPECIFICO</string>
    <string name="curtido_por">Curtido por</string>
    <string name="qtd_curtidas">0 pessoas</string>
    <string name="input_comentario">Adicione um comentário ...</string>
    <string name="botao_seguir">Seguir</string>
    <string name="botao_deixar_seguir">Deixar de seguir</string>
    <string name="botao_editar">Editar</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="botao_cancelar">Cancelar</string>
    <string name="botao_concluir">Concluir</string>
    <string name="botao_alterar_foto"><u>Alterar foto do perfil</u></string>
    <string name="nome">Nome</string>
    <string name="nova_publicacao">Nova publicação</string>
    <string name="botao_avancar">Avançar</string>
</resources>