<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.CadastroActivity">


    <ImageView
        android:id="@+id/tirar_foto"
        android:layout_width="@dimen/avatar_foto"
        android:layout_height="@dimen/avatar_foto"
        android:src="@drawable/avatar_foto"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        ></ImageView>

    <EditText
        android:id="@+id/nome"
        style="@style/InputStyle"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/user"
        android:hint="@string/input_nome"
        android:inputType="textCapSentences"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tirar_foto"/>

    <EditText
        android:id="@+id/email"
        style="@style/InputStyle"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/envelope"
        android:hint="@string/input_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <EditText
        android:id="@+id/senha"
        style="@style/InputStyle"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/key"
        android:hint="@string/input_senha"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/confirmar_senha"
        style="@style/InputStyle"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/key"
        android:hint="@string/input_confirmar_senha"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha" />

    <Button
        android:id="@+id/cadastrar"
        style="@style/ButtonStyle"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:text="@string/botao_cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmar_senha"/>

    <TextView
        android:id="@+id/ja_possui_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ja_possui_conta"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/biennale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastrar"
        >
    </TextView>

    <TextView
        android:id="@+id/fazer_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_faca_login"
        android:fontFamily="@font/biennale"
        android:textColor="@color/corPrimaria2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ja_possui_conta"
        ></TextView>

</androidx.constraintlayout.widget.ConstraintLayout>